src/test/differences/_L1__1_.txt
================================================================================================================================================================================================================================
============== WRONG TESTCASE: _L1__1_ ==========================================================================================================================================================
================================================================================================================================================================================================================================


------------------------------------------------
|            Testcase's content                |
------------------------------------------------
^abc
------------------------------------------------
|              Expected output                 |
------------------------------------------------
Error Token ^
------------------------------------------------
|                Your output                   |
------------------------------------------------
^,abc,<EOF>